--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -31,7 +32,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <!--<activity
+        <!--
+        <activity
             android:name=".MonitorActivity"
             android:label="@string/title_activity_measurements">
             <intent-filter>
@@ -39,11 +41,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>-->
+        </activity>
+        -->
         <activity
             android:name=".NewProcessActivity"
             android:label="@string/title_activity_newprocess">
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -59,11 +61,10 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".DeviceListActivity"
             android:label="@string/title_activity_device_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <service
             android:name="services.NotifierService"
@@ -83,7 +84,10 @@
             android:enabled="true"
             android:exported="true" />
 
-
+        <activity
+            android:name=".SplashActivity"
+            android:label="@string/title_activity_splash"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
