--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.google.code.ksoap2-android:ksoap2-android:3.6.2'
+    compile 'com.github.kevinsawicki:http-request:5.6'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+
 }
