--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 dependencies {
@@ -29,5 +30,8 @@ dependencies {
     compile 'com.google.code.ksoap2-android:ksoap2-android:3.6.2'
     compile 'com.github.kevinsawicki:http-request:5.6'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.jjoe64:graphview:4.2.1'
+
+
 
 }
