--- a/Android app/app/src/main/AndroidManifest.xml
+++ b/Android app/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:name="nandroid.artesanus.common.AppController"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_beer_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -27,8 +27,13 @@
             android:name=".MenuActivity"
             android:label="@string/menu_title"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+
         <activity android:name=".MonitoringActivity"
             android:label="@string/monitor_title">
             <!--<intent-filter>
@@ -68,11 +73,11 @@
         <activity
             android:name="nandroid.artesanus.gui.NewBeerCraftingActivity"
             android:label="@string/title_activity_newcrafting">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> -->
         </activity>
 
         <service
@@ -97,7 +102,11 @@
             android:name=".SplashActivity"
             android:label="@string/title_activity_splash"
             android:theme="@style/AppTheme.NoActionBar">
+            <!--<intent-filter>
+                            <action android:name="android.intent.action.MAIN" />
 
+                            <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> -->
         </activity>
 
 
