Remove SplashActivity from history

--- a/Android app/app/src/main/AndroidManifest.xml
+++ b/Android app/app/src/main/AndroidManifest.xml
@@ -27,11 +27,11 @@
             android:name=".MenuActivity"
             android:label="@string/menu_title"
             android:exported="true">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> -->
         </activity>
 
         <activity android:name=".MonitoringActivity"
@@ -101,12 +101,13 @@
         <activity
             android:name=".SplashActivity"
             android:label="@string/title_activity_splash"
-            android:theme="@style/AppTheme.NoActionBar">
-            <!--<intent-filter>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:noHistory="true">
+            <intent-filter>
                             <action android:name="android.intent.action.MAIN" />
 
                             <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> -->
+            </intent-filter>
         </activity>
 
 
