--- a/Android app/app/src/main/AndroidManifest.xml
+++ b/Android app/app/src/main/AndroidManifest.xml
@@ -2,11 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nandroid.artesanus.gui">
 
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <application
         android:allowBackup="true"
@@ -43,28 +42,6 @@
         </activity>
 
         <activity
-            android:name="nandroid.artesanus.gui.MonitorActivity"
-            android:label="@string/monitor_title"/>
-        <activity
-            android:name="nandroid.artesanus.gui.NewProcessActivity"
-            android:label="@string/title_activity_newprocess">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <!--
-                  ATTENTION: This data URL was auto-generated. We recommend that you use the HTTP scheme.
-                  TODO: Change the host or pathPrefix as necessary.
-                -->
-                <data
-                    android:host="arti.nando.example.com"
-                    android:pathPrefix="/newprocess"
-                    android:scheme="http" />
-            </intent-filter>
-        </activity>
-
-        <activity
             android:name="nandroid.artesanus.gui.DeviceListActivity"
             android:label="@string/title_activity_device_list"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -72,11 +49,11 @@
         <activity
             android:name="nandroid.artesanus.gui.NewBeerCraftingActivity"
             android:label="@string/title_activity_newcrafting">
-            <!--<intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
 
         <service
@@ -102,11 +79,11 @@
             android:label="@string/title_activity_splash"
             android:theme="@style/AppTheme.NoActionBar"
             android:noHistory="true">
-            <intent-filter>
+            <!--<intent-filter>
                             <action android:name="android.intent.action.MAIN" />
 
                             <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> -->
         </activity>
 
 
@@ -114,7 +91,7 @@
         <service
             android:name="nandroid.artesanus.services.TimerService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true"></service>
     </application>
 
 </manifest>
