--- a/Android app/app/build.gradle
+++ b/Android app/app/build.gradle
@@ -17,7 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/assets', 'src/main/assets/']
+        }
+    }
 }
 
 dependencies {
@@ -31,7 +35,4 @@ dependencies {
     compile 'com.github.kevinsawicki:http-request:5.6'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.jjoe64:graphview:4.2.1'
-
-
-
 }
