--- a/Android app/app/src/main/AndroidManifest.xml
+++ b/Android app/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
             android:name=".MenuActivity"
             android:label="@string/menu_title"
             android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/menu_title"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
